--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ padding-bottom: .5rem;
   min-height:30vh;
   display: flex;
   align-items: center;
-  background: url(../images/home-img.jpeg) no-repeat;
+  background: url(../home-img.jpeg) no-repeat;
   background-size: cover;
   background-position:center;
 }
